--- a/prog-fund-assessment-2.vcxproj.filters
+++ b/prog-fund-assessment-2.vcxproj.filters
@@ -18,14 +18,29 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="console.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="grid.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="x.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="o.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="menu.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
