--- a/prog-fund-assessment-2.vcxproj.filters
+++ b/prog-fund-assessment-2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pipe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -29,13 +32,8 @@
     <ClInclude Include="player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="pipehead.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="pipewall.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
+    <ClInclude Include="pipe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
