--- a/prog-fund-assessment-2.vcxproj
+++ b/prog-fund-assessment-2.vcxproj
@@ -136,6 +136,9 @@
     <ClInclude Include="pipe.h" />
     <ClInclude Include="player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="header.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
